--- a/hotelApp-frontend/src/index.css
+++ b/hotelApp-frontend/src/index.css
@@ -92,7 +92,7 @@ body {
 
 
 .parallax {
-  background-image: url("./assets/images/parrall.jpg");
+  background-image: url("");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -104,7 +104,7 @@ body {
   position: relative;
   height: 150px;
   background-size: cover;
-  background-image: url("./assets/images/services4.jpg");
+  background-image: url("");
   background-position: center center;
 }
 
